# agent-tracker

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/agent_tracker/: __init__.py  cli.py  client.py  config.py  constants.py  doctor.py  errors.py  events.py  ids.py  integration.py  mapping.py  payloads.py  queue.py  redaction.py  reporting.py  resources.py  schema.py  sink.py  taxonomy.py  testing.py  upload.py
src/agent_tracker/adapters/: __init__.py  aitrade.py
src/agent_tracker/prompts/: add-aitrade-adapter.md  backend-contract-check.md  integrate-custom-agent.md  integrate-ebook-agent.md  review-agent-tracker-integration.md
src/agent_tracker/schemas/: batch.schema.json  event-envelope.schema.json
src/agent_tracker/schemas/event-types/: action.outcome.recorded.schema.json  agent.build.recorded.schema.json  agent.run.completed.schema.json  agent.run.started.schema.json  capital.flow.recorded.schema.json  cost.usage.recorded.schema.json  decision.outcome.recorded.schema.json  decision.proposed.schema.json  diagnostic.check.completed.schema.json  error.recorded.schema.json  evaluation.epoch.member.completed.schema.json  evaluation.epoch.started.schema.json  llm.call.completed.schema.json  llm.call.started.schema.json  market.snapshot.recorded.schema.json  memory.read.completed.schema.json  opportunity.board.recorded.schema.json  opportunity.candidate.reviewed.schema.json  order.intent.recorded.schema.json  paper.fill.recorded.schema.json  performance.snapshot.recorded.schema.json  portfolio.snapshot.recorded.schema.json  position.snapshot.recorded.schema.json  replay.result.recorded.schema.json  risk.check.completed.schema.json  setup.profile.recorded.schema.json  source.claim.recorded.schema.json  strategy.context.recorded.schema.json  tool.call.completed.schema.json  trade.rejected.schema.json
src/agent_tracker/schemas/taxonomies/: component-taxonomy.json  mistake-families.json  privacy-redaction-rules.json
src/ellzaf_agent/: __init__.py  cli.py  client.py  config.py  constants.py  doctor.py  errors.py  events.py  integration.py  queue.py  redaction.py  reporting.py  resources.py  schema.py  serialization.py  sink.py  taxonomy.py  testing.py  upload.py
src/ellzaf_agent/adapters/: aitrade.py
src/ellzaf_agent/prompts/: add-aitrade-adapter.md  backend-contract-check.md  integrate-ebook-agent.md  review-ellzaf-integration.md
src/ellzaf_agent/schemas/: batch.schema.json  event-envelope.schema.json
src/ellzaf_agent/schemas/event-types/: agent.build.recorded.schema.json  agent.run.completed.schema.json  agent.run.started.schema.json  capital.flow.recorded.schema.json  cost.usage.recorded.schema.json  decision.outcome.recorded.schema.json  decision.proposed.schema.json  error.recorded.schema.json  llm.call.completed.schema.json  llm.call.started.schema.json  market.snapshot.recorded.schema.json  memory.read.completed.schema.json  order.intent.recorded.schema.json  paper.fill.recorded.schema.json  performance.snapshot.recorded.schema.json  portfolio.snapshot.recorded.schema.json  position.snapshot.recorded.schema.json  replay.result.recorded.schema.json  risk.check.completed.schema.json  source.claim.recorded.schema.json  strategy.context.recorded.schema.json  tool.call.completed.schema.json  (+1 more)
tests/: test_aitrade_adapter.py  test_async_and_decorator.py  test_cli_sink_doctor.py  test_client_events.py  test_config.py  test_contract_edge_matrix.py  test_diagnostic_telemetry.py  test_generated_matrix.py  test_mapping.py  test_payload_builders.py  test_queue_upload.py  test_release_edge_matrix.py  test_reporting.py  test_schema_taxonomy_resources.py  test_serialization_redaction.py  test_version_metadata.py
(+49 files in other folders)
