[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ellzaf-agent"
version = "0.1.0"
description = "Telemetry SDK for self-built AI trading agents."
readme = "README.md"
requires-python = ">=3.11"
license = "LicenseRef-Proprietary"
authors = [{ name = "Ellzaf" }]
keywords = [
  "ai",
  "observability",
  "telemetry",
  "trading",
  "paper-trading",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "jsonschema>=4.23",
  "pytest>=8",
  "ruff>=0.8",
]
aitrade = [
  "psycopg[binary]>=3.2",
]
otel = []
openai = []
langchain = []
agno = []

[project.scripts]
ellzaf-agent = "ellzaf_agent.cli:main"

[project.urls]
Homepage = "https://ellzaf.com"
Documentation = "https://ellzaf.com"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ellzaf_agent = [
  "prompts/*.md",
  "schemas/*.json",
  "schemas/event-types/*.json",
  "schemas/fixtures/invalid/*.json",
  "schemas/fixtures/reporting/*.json",
  "schemas/fixtures/valid/*.json",
  "schemas/taxonomies/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []
