[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-tracker"
version = "0.2.0"
description = "Telemetry SDK for self-built AI trading agents."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Ellzaf" }]
keywords = [
  "ai",
  "observability",
  "telemetry",
  "trading",
  "paper-trading",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "jsonschema>=4.23",
  "pytest>=8",
  "ruff>=0.8",
  "twine>=6",
]
aitrade = [
  "psycopg[binary]>=3.2",
]
otel = []
openai = []
langchain = []
agno = []

[project.scripts]
agent-tracker = "agent_tracker.cli:main"

[project.urls]
Homepage = "https://ellzaf.com"
Documentation = "https://ellzaf.com"
Repository = "https://github.com/Ellzaf/agent-tracker"
Issues = "https://github.com/Ellzaf/agent-tracker/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
agent_tracker = [
  "py.typed",
  "prompts/*.md",
  "schemas/*.json",
  "schemas/event-types/*.json",
  "schemas/fixtures/batches/invalid/*.json",
  "schemas/fixtures/batches/valid/*.json",
  "schemas/fixtures/invalid/*.json",
  "schemas/fixtures/reporting/*.json",
  "schemas/fixtures/upload-responses/*.json",
  "schemas/fixtures/valid/*.json",
  "schemas/taxonomies/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
ignore = []
